# ICPNFT_Airdrop

./: README.md  call.sh  dfx.json
src/nft_backend/: Cargo.toml  nft_backend.did
src/nft_backend/src/: actor.rs  lib.rs  service.rs  state.rs  token.rs  types.rs
