[package]
name = "nft_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6"
ic-cdk-macros = "0.13.2"
ic-cdk-timers = "0.7"     # Feel free to remove this dependency if you don't need timers
ic-ledger-types = "0.5.0"
ic-types = "0.7.0"
ic_principal = "0.1.1"
serde = "1.0.197"
serde_bytes = "0.11.14"
